# spaceapps2025

./: .gitignore  README.md  TOKEN.py  app.py  installer.sh  pyproject.toml  requirements.txt  sentinel_img.py
.streamlit/: secrets.toml.example
