[project]
name = "spaceapps2025"
version = "0.1.0"
description = "Streamlit prototype for Swiss mountain risk monitoring with Sentinel imagery."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "oauthlib",
    "pandas",
    "pillow",
    "requests",
    "requests-oauthlib",
    "streamlit",
    "streamlit-option-menu",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"
